[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/start.gd" type="Script" id=1]
[ext_resource path="res://assets/Connection.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 7
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 28.0
margin_top = 75.0
margin_right = 88.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 16.0
margin_right = 136.0
margin_bottom = 32.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 2 )
text = "Get Me My Drones!"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 87.0
margin_top = 7.0
margin_right = 132.0
margin_bottom = 22.0
rect_rotation = 29.79
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/normal_font = SubResource( 3 )
text = "GMMD"
scroll_active = false

[node name="Button2" type="Button" parent="."]
margin_left = 28.0
margin_top = 108.0
margin_right = 88.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 4 )
text = "Exit"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 28.0
margin_top = 63.0
margin_right = 87.0
margin_bottom = 74.0
custom_fonts/normal_font = SubResource( 5 )
text = "Epilepsy warning"
scroll_active = false

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
